light_clone/tests/ui/enum_not_supported.rs
use light_clone::LightClone;

#[derive(LightClone)]
enum MyEnum {
    A,
    B(i32),
}

fn main() {}
